--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<p>I'm trying to constantly keep myself updated in the fields of Cybersec and Blockchain. Working on a few Blockchain Projects to help me understand the working on this technology and at the same time crack some more machines on Tryhackme and hackthebox</p>
 									<h3>ACHIEVEMENTS</h3> 
 									<p>- Tryhackme top 1%
-										- DRDO DIAT certified information professionals</p>
+										- DRDO DIAT certified information professionals  -Microsoft Azure SC-900</p>
 									<script src="https://tryhackme.com/badge/387186"></script>
 
 
