--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="">Crypto dashboard<br />
+										<h2><a href="https://safe-ridge-80321.herokuapp.com/">Crypto dashboard<br />
 										</a></h2>
 									</header>
 									<a href="" class="image fit"><img src="images/cryptobase.png" alt="" /></a>
@@ -134,6 +134,17 @@
 									<p>Complete notes to clear ms sc-900</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/codexgegas/My_vault/tree/main/SC-900" class="button">Complete Notes</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/codexgegas/Elections">Ethereum based Voting d-app<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/codexgegas/Elections" class="image fit"><img src="https://media-exp1.licdn.com/dms/image/C4D12AQEwbNrT2ZyflQ/article-cover_image-shrink_600_2000/0/1623754877625?e=1658966400&v=beta&t=iLDre-chJn2kfpuFLsQ_XJx0SmcPaHIf126Cf-yNltc" alt="" /></a>
+									<p>A blockchain project based on elections using truffle ganace and web3.js </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/codexgegas/Elections" class="button">Complete Notes</a></li>
 									</ul>
 								</article>
 								
