--- a/index.html
+++ b/index.html
@@ -144,7 +144,18 @@
 									<a href="https://github.com/codexgegas/Elections" class="image fit"><img src="https://media-exp1.licdn.com/dms/image/C4D12AQEwbNrT2ZyflQ/article-cover_image-shrink_600_2000/0/1623754877625?e=1658966400&v=beta&t=iLDre-chJn2kfpuFLsQ_XJx0SmcPaHIf126Cf-yNltc" alt="" /></a>
 									<p>A blockchain project based on elections using truffle ganace and web3.js </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/codexgegas/Elections" class="button">Complete Notes</a></li>
+										<li><a href="https://github.com/codexgegas/Elections" class="button">Complete Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/codexgegas/DRDO_CTF_PHASE2">DRDO CTF 2021<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/codexgegas/DRDO_CTF_PHASE2" class="image fit"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/68/Defence_Research_and_Development_Organisation_Logo.png/220px-Defence_Research_and_Development_Organisation_Logo.png" alt="" /></a>
+									<p>CTF repo for DRDO CTF 2021 with solutions </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/codexgegas/DRDO_CTF_PHASE2" class="button">Write up</a></li>
 									</ul>
 								</article>
 								
