--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/codexgegas/Cryptobase/" class="image fit"><img src="images/crypto.png" alt="" /></a>
-									<p>A website for live Crypto perice Updates using Coinbase api.</p>
+									<p>A website for live Crypto price Updates using Coinbase api.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/codexgegas/Cryptobase/" class="button">Full Write Up</a></li>
 									</ul>
